<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/fragment_signin"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_username"
        android:imeOptions="actionNext"
        android:visibility="gone"
        android:hint="@string/edittext_username_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:hint="@string/edittext_email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edittext_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:hint="@string/edittext_password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/button_login"
        android:text="@string/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/text_signup"
        android:clickable="true"
        android:text="@string/text_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>